[package]
name = "service_utils"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-server = "0.4.0"
axum = {version="0.5",features=["ws","headers"]}
axum-macros = "0.2.3"
headers = "0.3.7"
anyhow = "1"
sqlx = { version = "0.6", features = ["chrono","macros", "postgres", "uuid", "time", "bigdecimal", "offline", "runtime-tokio-native-tls" ] }
uuid = { version = "1.3", features = ["serde", "v4"] }
reqwest = { version = "0.11.11", default-features = false, features = ["json"] }
thiserror = "1"
jsonwebtoken = "7.2.0"
tower = {version = "0.4", features=["full"]}
micros = { path = "micros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.2.2", features = ["fs", "trace", "set-header","cors"] }
tower-service = "0.3"
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
dotenv = "0.15"
lazy_static = "1.4"
pin-project = "1"

tonic = { version = "0.5", features = ["tls", "tls-roots", "prost"] }
prost = "0.8.0"
prost-types = "0.8.0"

schemars = { version = "0.8" }
okapi = { version = "0.7.0-rc.1" }
openapi-rs = { git = "https://github.com/Promoflix-Org/openapi-rs" }

[build-dependencies]
tonic-build = { version = "0.5", features = ["prost"] }